--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
   <body>
     <header>
       <h1>Discover hidden places in the world around you</h1>
-      <h2><a href="">Download Excursion (Coming soon!)</a></h2>
+      <h3><a href="">Download Excursion (Coming soon!)</a></h3>
     </header>
+
+    <video src="./resources/videos/excursion.mp4"></video>
+
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    <p><img src="./resources/images/camp.jpg"/></p>
+
+    <p><img src="./resources/images/phone.png"/></p>
+
+    <h2>Coming Soon for iPhone and Android</h2>
+    <h3>Download Excursion (Coming soon!)</h3>
+
+    <footer>
+      <h4>&copy; Excursion</h4>
+    </footer>
 
   </body>
 </html>
